tests/snapshots/run_wpt_conformance__trtx_cast_BigInt_to_int64_underflow.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "mlNumber.https.any.js",
    "cast BigInt to int64 underflow",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: i64[5] @bytes([10, 0, 0, 0, 251, 255, 255, 255, 246, 255, 255, 255, 4, 0, 0, 0, 254, 255, 255, 255, 255, 255, 255, 255, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);\n  }\n\n  nodes {\n    [clampOutput] = clamp(operand_0, label=\"\", maxValue=\"-9223372036854775820\", minValue=null);\n  }\n\n  outputs { clampOutput; }\n}\n",
        ),
    },
)
