tests/snapshots/run_wpt_conformance__trtx_cast_BigInt_to_uint64_underflow.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "mlNumber.https.any.js",
    "cast BigInt to uint64 underflow",
    "trtx",
    Failed {
        msg: Some(
            "An error in the Trtx: Runtime error: setNamedWeights (with location) rejected\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: u64[4] @bytes([246, 255, 255, 255, 9, 0, 0, 0, 127, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);\n  }\n\n  nodes {\n    [clampOutput] = clamp(operand_0, label=\"\", maxValue=\"-1\", minValue=null);\n  }\n\n  outputs { clampOutput; }\n}\n",
        ),
    },
)
