tests/snapshots/run_wpt_conformance__trtx_cast_float32_1D_tensor_to_int32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast float32 1D tensor to int32",
    "trtx",
    "PASS",
)
